Make most browser accelerators not repeat.

Prevent browser accelerators from repeating unless they're associated with the
following commands:

  IDC_FIND_NEXT
  IDC_FIND_PREVIOUS
  IDC_FOCUS_NEXT_PANE
  IDC_FOCUS_PREVIOUS_PANE
  IDC_MOVE_TAB_NEXT
  IDC_MOVE_TAB_PREVIOUS
  IDC_SELECT_NEXT_TAB
  IDC_SELECT_PREVIOUS_TAB

BUG=626154
TEST=Ctrl-Tab still repeats but Ctrl-t doesn't

Review-Url: https://codereview.chromium.org/2128243003
Cr-Commit-Position: refs/heads/master@{#416995}

Former-commit-id: 42d287c9658c6bfa1202275597f28399409e8603